// ParkPal - National Park Lodging & Review Platform
// Entity Relationship Diagram (ERD)
// Version: 2.0
// Date: December 7, 2025

Project ParkPal {
  database_type: 'MySQL'
  Note: 'Database schema for ParkPal - National Park Lodging & Review Platform'
}

// ===================================
// TABLE GROUPS FOR BETTER LAYOUT
// ===================================

TableGroup user_management {
  User
}

TableGroup park_system {
  National_Park
}

TableGroup lodging_system {
  Lodging
  Lodging_Reservation
}

TableGroup review_system {
  Park_Review
}

// ===================================
// TABLES
// ===================================

Table User {
  User_ID int [pk, increment]
  Email varchar(255) [not null, unique]
  Password_Hash varchar(255) [not null]
  First_Name varchar(100) [not null]
  Last_Name varchar(100) [not null]
  Phone_Number varchar(20)
  Created_At timestamp [not null, default: `now()`]
  Updated_At timestamp [not null, default: `now()`]
  
  Note: 'User accounts and authentication information'
}

Table National_Park {
  Park_ID int [pk, increment]
  Park_Name varchar(255) [not null, unique]
  State varchar(100) [not null]
  Region varchar(100)
  Description text
  Wildlife_Information text
  Plant_Information text
  Area_Square_Miles decimal(10,2)
  Annual_Visitors int
  Best_Time_To_Visit varchar(100)
  Entry_Fee decimal(10,2)
  Free_Entry_Days text
  Official_Website varchar(500)
  Latitude decimal(10,8)
  Longitude decimal(11,8)
  Park_Activities_Events text
  Popular_Park_Trails text
  Difficulty_Rating varchar(50)
  Kid_Friendliness_Rating int
  Pet_Friendliness_Rating int
  
  Note: 'All 63 US National Parks information'
}

Table Lodging {
  Lodging_ID int [pk, increment]
  Park_ID int [not null, ref: > National_Park.Park_ID]
  Lodging_Name varchar(255) [not null]
  Lodging_Type varchar(50) [not null]
  Address varchar(255)
  City varchar(100)
  State varchar(100)
  Zip_Code varchar(10)
  Description text
  Amenities text
  Price_Per_Night decimal(10,2) [not null]
  Contact_Phone varchar(20)
  Contact_Email varchar(255)
  Distance_From_Park_Miles decimal(10,2)
  Star_Rating decimal(2,1)
  
  Note: 'Lodging options near national parks (hotels, lodges, campgrounds, cabins)'
}

Table Lodging_Reservation {
  Reservation_ID int [pk, increment]
  User_ID int [not null, ref: > User.User_ID]
  Lodging_ID int [not null, ref: > Lodging.Lodging_ID]
  Check_In_Date date [not null]
  Check_Out_Date date [not null]
  Number_Of_Guests int [not null]
  Number_Of_Rooms int [not null]
  Guest_Name varchar(200) [not null]
  Guest_Phone varchar(20) [not null]
  Guest_Email varchar(255) [not null]
  Confirmation_Number varchar(50) [not null, unique]
  Reservation_Status varchar(50) [not null]
  Total_Cost decimal(10,2) [not null]
  Created_At timestamp [not null, default: `now()`]
  
  Note: 'Lodging reservation records for users'
}

Table Park_Review {
  Review_ID int [pk, increment]
  User_ID int [not null, ref: > User.User_ID]
  Park_ID int [not null, ref: > National_Park.Park_ID]
  Rating int [not null]
  Review_Text text [not null]
  Visit_Date date [not null]
  Review_Date timestamp [not null, default: `now()`]
  Photo_URLs text
  
  Note: 'User reviews and ratings for national parks'
}

// ===================================
// RELATIONSHIPS SUMMARY
// ===================================

// User relationships
// - User (1) -> (Many) Lodging_Reservation
// - User (1) -> (Many) Park_Review

// National_Park relationships
// - National_Park (1) -> (Many) Lodging
// - National_Park (1) -> (Many) Park_Review

// Lodging relationships
// - Lodging (1) -> (Many) Lodging_Reservation
